Step 6: Update Tests - Compile: SUCCESS
Updated BlobStorageServiceTest for azure-storage-blob v2
- Switched mocks to final v2 service, container, blob, and block blob clients
- Rebuilt fixtures around clientcore responses and paged results
- Added coverage for v2-specific 404/409 behavior mapping